# Simulazione-epidemia

./: CMakeLists.txt  Principale  README.md  board.cpp  board.hpp  epidemic.cpp  epidemic.hpp  main.cpp  test.cpp
progetto/simulation/: CMakeLists.txt  board.cpp  board.hpp  epidemic.cpp  epidemic.hpp  main.cpp
progetto/tests/: test.cpp
simulation/: board.cpp  board.hpp  epidemic.cpp  epidemic.hpp  font.hpp  main  main.cpp
tests/: CMakeLists.txt  test.cpp
