cmake_minimum_required(VERSION 3.16.3)

project(sir)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)


ADD_SUBDIRECTORY(simulation)
ADD_SUBDIRECTORY(tests)

SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -g -fsanitize=address")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
